@@ -52,14 +52,20 @@ public final static class Request {
 
    //-------------------------------------------------------------------------
    // Fields
-   //-------------------------------------------------------------------------</xsl:text>
+   //-------------------------------------------------------------------------
+
+   private final String __ip;</xsl:text>
 		<xsl:apply-templates select="input/param" mode="field" />
 
 		<xsl:text>
 
    //-------------------------------------------------------------------------
    // Methods
-   //-------------------------------------------------------------------------</xsl:text>
+   //-------------------------------------------------------------------------
+
+   public final String ip() {
+      return __ip;
+   }</xsl:text>
 
 		<xsl:apply-templates select="input/param" mode="method" />
 
@@ -77,7 +83,7 @@ public final static class Request {
    /**
     * Constructs a new <code>Request</code> instance.
     */
-   public Request(]]></xsl:text>
+   public Request(String _ip,]]></xsl:text>
 		<xsl:for-each select="input/param">
 			<xsl:variable name="javatype">
 				<xsl:call-template name="javatype_for_type">
@@ -94,6 +100,7 @@ public final static class Request {
 			<xsl:value-of select="@name" />
 		</xsl:for-each>
 		<xsl:text>) {
+      __ip = _ip;
 </xsl:text>
 		<xsl:for-each select="input/param">
 			<xsl:text>      _</xsl:text>
